@@ -333,4 +333,10 @@ TOOLBAR_CHILD_WIDGET       = 4
 TREE_VIEW_LINE = 0
 TREE_VIEW_ITEM = 1
 
+# GtkCornerType
+CORNER_TOP_LEFT = 0
+CORNER_BOTTOM_LEFT = 1
+CORNER_TOP_RIGHT = 2
+CORNER_BOTTOM_RIGHT = 3
+
 
