@@ -1,8 +1,15 @@
 2001-10-10  Johan Dahlin  <zilch.am@home.se>
 
-    * gtkmodule.c: add test for PYGTK_NO_THREADS environment variable
-      and disable threading in runtime if set. Patch by 
-      Christian Reis <kiko@async.com.br>
+	Patch from Christian Reis <kiko@async.com.br>
+        * generate/gtkcontainers.defs, gtk.py: Add GtkWindow 
+	members as attributes.
+	* GTK.py: Add a few constants.
+	
+2001-10-10  Johan Dahlin  <zilch.am@home.se>
+
+        * gtkmodule.c: add test for PYGTK_NO_THREADS environment variable
+        and disable threading in runtime if set. Patch by 
+        Christian Reis <kiko@async.com.br>
 
 2001-08-26  James Henstridge  <james@daa.com.au>
 
